// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero renders 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 16px;
  padding-right: 16px;
  margin-left: auto;
  margin-right: auto;
  max-width: 768px;
  font-size: 28px;
  width: 100%;
  background-color: #0588cb;
  color: #f8f9fa;
  text-align: center;
}

@media screen and (min-width:32em) {
  .c0 {
    max-width: 1024px;
  }
}

@media screen and (min-width:48em) {
  .c0 {
    max-width: 1280px;
  }
}

<div
  class="c0"
/>
`;

exports[`Hero renders with children 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 16px;
  padding-right: 16px;
  margin-left: auto;
  margin-right: auto;
  max-width: 768px;
  font-size: 28px;
  width: 100%;
  background-color: #0588cb;
  color: #f8f9fa;
  text-align: center;
}

@media screen and (min-width:32em) {
  .c0 {
    max-width: 1024px;
  }
}

@media screen and (min-width:48em) {
  .c0 {
    max-width: 1280px;
  }
}

<div
  class="c0"
>
  <div />
</div>
`;
